# bot-trader

./: .gitignore  .mega-linter.yml  .pre-commit-config.yaml  BOT R1  README.md  example.env  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml  labeler-config.yml
.github/workflows/: labeler.yml  mega-linter.yml_disabled
bot_antigo/: ai_training.py  main.py
docs/: prompts para llm.md
src/: main.py
src/bot_antigo/: ModeloBTC01.py  ModeloBTC01_old.py  ai_training.py  main.py  treinamento_ia.py
src/bot_old/: bot_antigo.py  treinamento_ia.py
src/core/: config.py  constants.py  logger.py
src/dashboard/: dashboard.py
src/models/: ai_training.py  ai_training_tensorflow.py  base.py  lstm_model_manager.py  lstm_training.py  model_manager.py
src/repositories/: data_handler.py  data_preprocessor.py  trade_repository.py
src/services/: binance_client.py  binance_data_provider.py  binance_order_executor.py  cleanup_handler.py  entry_scorer.py  lstm_signal_generator.py  market_analyzers.py  model_retrainer.py  order_calculator.py  performance_monitor.py  risk_reward_manager.py  trade_processor.py  trading_bot.py  trading_strategy.py  trend_analyzer.py
src/strategies/: base.py  downtrend_strategy.py  range_strategy.py  strategy_manager.py  strategy_selector.py  uptrend_strategy.py  volatility_strategies.py
src/traderbot_v1/: binance_client.py  config.py  dashboard.py  data_handler.py  logger.py  main.py  model_manager.py  risk_manager.py  sentiment_analysis.py  trading_bot.py  trading_strategy.py  treinamento_ia.py
(+49 files in other folders)
